--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -14,9 +14,19 @@ header {
     background-color: #3161e0;
 }
 
+nav ul li {
+    display: inline-block;
+    line-height: 100px;
+    vertical-align: middle;
+}
+
 /* UTILITIES */
 .debug-box {
     height: 100px;
     background-color: rgba(0, 0, 0, .25);
     border: 1px solid black;
+}
+
+.white {
+    color: white;
 }
