--- a/css/main.css
+++ b/css/main.css
@@ -1,32 +1,15 @@
 * {
     padding: 0;
-    margin: 0%;
+    margin: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
 .container {
-    width: 70%;
+    width: 100%;
     margin: 0 auto;
-}
-
-header {
     background-color: #3161e0;
-}
-
-nav ul li {
-    display: inline-block;
-    line-height: 100px;
-    vertical-align: middle;
+    height: 150px;
 }
 
 /* UTILITIES */
-.debug-box {
-    height: 100px;
-    background-color: rgba(0, 0, 0, .25);
-    border: 1px solid black;
-}
-
-.white {
-    color: white;
-}
