--- a/css/main.css
+++ b/css/main.css
@@ -12,17 +12,30 @@
     height: 150px;
 }
 
+header {
+    line-height: 78px;
+}
+
 header img,
 header ul li {
     display: inline-block;
+    vertical-align: middle;
 }
 
 .col1 {
-    width: 20%;
+    width: 30%;
 }
 
 .col2 {
-    width: 80%;
+    width: 70%;
+}
+
+nav li {
+    margin-right: 50px;
+}
+
+.login {
+    margin-left: 280px;
 }
 
 /* UTILITIES */
